fix(user): make the reward list and set update atomically fix(TourGuideService): make the user map safe for concurrent writes